Dev/dcrd reduce 1

--- a/journal/201907.md
+++ b/journal/201907.md
@@ -1,4 +1,4 @@
-{DRAFT} Decred Journal – July 2019
+# {DRAFT} Decred Journal – July 2019
 
 ![{alt text}](../img/{file.jpg} "{hover tooltip text}")
 
@@ -6,38 +6,16 @@
 
 ## Development
 
-{add below overview of activity for each project. add any other project that warranets a paragraph, drop projects without notable updates. for each project the order of reporting is: changes released > merged to master > started work > discussions and future plans}
-
 [dcrd](https://github.com/decred/dcrd): Code maintenance, bug fixes, test infrastructure. 
 
-New major versions of several main modules introduced to take advantage of recent improvements in other modules. Version 4 of the `rpcclient` [introduced](https://github.com/decred/dcrd/pull/1807) to make use of the benefits provided by the updated `dcrutil` and `chaincfg` modules. Version 2 of the `blockchain/stake` [introduced](https://github.com/decred/dcrd/pull/1803) for compatability with updated `dcrutil`, `chaincfg`, and `database` modules. This update also took the opportunity to address a few other needed changes to the staking API {SB: is "staking API" accurate? use other term?}. Version 2 of the `database` module [introduced](https://github.com/decred/dcrd/pull/1799) to make use of changes in `dcrutil`. This update breaks the tight coupling of `database` with `dcrutil` by introducing a new `BlockSerializer` interface and using it instead of `*dcrutil.Block` in the database interface API. The `dcrjson` module has also seen a new major version bump to v3. This version removes all dcrd RPC type support, instead focusing only on method and type registration. In order to improve backwards compatibility with dcrjson/v2, the API has been modified to register methods as interface{} instead of string. This allows different method string types to be used to key parameter types during registration and lookup, and will allow dcrjson/v2 to forward registrations of RPC methods to v3 without causing duplicate registrations errors for incompatible types. With the introduction of the new types package, the RPC API has been modified to replace concatenated hash blobs to JSON string arrays of hash strings. The RPC API major version is bumped to reflect this change. {SB: description of this last module update taken verbatim from the PR, should probably be shortened, given some context for the reader}
+New major versions of several modules were introduced to take advantage of recent improvements in other modules.
 
-Four new [functions](https://github.com/decred/dcrd/pull/1802) on the `Param` struct, which return new stake-related parameters: `VotesPerBlock`, `StakeValidationBeginHeight`, `StakeEnableHeight`, `TicketExpiryBlocks`. This will allow these parameters to be used directly as input to future interfaces. 
-
-Dependency upgrades to: mgcs (go-storage) dependencies [updated](https://github.com/decred/dcrd/pull/1804) in preparation for upgrade to v1.1.0., JSON-RPC types [updated](https://github.com/decred/dcrd/pull/1789), Docker [updated](https://github.com/decred/dcrd/pull/1782) to use go 1.12.  
-
-
-Merged:
-* rpcclient: Introduce v4 module https://github.com/decred/dcrd/pull/1807
-  Version 4 of the `rpcclient` [introduced](https://github.com/decred/dcrd/pull/1807) in order to make use of the benefits provided by the recently updated `dcrutil` and `chaincfg` modules. Note that while `rpcclient` Version 4 is officially in the codebase, building dcrd from source will still produce binaries based on the Version 3 `rpcclient` module. 
-* blockchain/stake: Introduce v2 module. https://github.com/decred/dcrd/pull/1803 (related to new Version 4 `rpcclient` module? In order to make use of chaincfg/v2, dcrutil/v2, and database/v2, a new major version of the blockchain/stake module (blockchain/stake/v2) is [introduced](https://github.com/decred/dcrd/pull/1803) because blockchain/stake/v1 accepts and returns types from chaincfg/v1, dcrutil/v1, and database/v1 in its API. This was also used as an opportunity to address a few other items that require a new major version (SB: details on individual changes in PR). Finally, it should also be noted that this only introduces the new module and does not update anything to make use of it yet, so building the software will still produce binaries based on the v1 module.)
-* database: Introduce v2 module https://github.com/decred/dcrd/pull/1799 (SB: related to other changes to group together..In order to make use of dcrutil/v2, a new major version of the database module is required because database/v1 accepts and returns types from dcrutil/v1 in its API...Since a new major version is required, this also takes the opportunity break the tight coupling with dcrutil by introducing a new BlockSerializer interface and accepting it instead of *dcrutil.Block in the database interface API. Consequently, this introduces database/v2 which addresses the aforementioned items. Binaries still base on v1 module... 
-* dcrjson: Introduce v3 and move types to module. https://github.com/decred/dcrd/pull/1779 (This commit introduces a new major version of the dcrjson module which removes all dcrd RPC type support, instead focusing only on method and type registration....In order to improve backwards compatibility with dcrjson/v2, the API has been modified to register methods as interface{} instead of string. This allows different method string types to be used to key parameter types during registration and lookup, and will allow dcrjson/v2 to forward registrations of RPC methods to v3 without causing duplicate registrations errors for incompatible types.
-* main: Add database/v2 override for tests. https://github.com/decred/dcrd/pull/1806 (keeping tests up to date..)
-* chaincfg: Fix merkle root of v1 simnet genesis block https://github.com/decred/dcrd/pull/1805 (fix bug in simnet (hard fork change but OK because simnet)
-* gcs: Prepare v1.1.0 https://github.com/decred/dcrd/pull/1804 (updates gcs (go-storage) dependencies in preparation for upgrading to go-storage v1.1.0. Also optimizes the `AddSigScript` method by making use of the zero-alloc tokenizer now available in the `txscript/v2` module).
-* chaincfg: Add stake params accessor funcs https://github.com/decred/dcrd/pull/1802 (Four new functions on the `Params` struct (SB: purpose of this struct? High-levle meaning to reader?), which return some stake-related parameters (VotesPerBlock, StakeValidationBeginHeight, StakeEnableHeight, TicketExpiryBlocks). This will allow the parameters to be used directly as input to an interfact in the future). 
-* chaincfg: Avoid block 1 subsidy codegen explosion. https://github.com/decred/dcrd/pull/1801 (Fixes an issue where the go compiler was causing the package "weight" (size?) to explode to 7.7 MB. This improves the compiled size of the package by using code generation techniquest to optimize the memory layout and code transformation of the subsidy values each time a params functino is called"...the new size of the compiled package is 379dB, about 5% of the original size.
-* hdkeychain: Prepare v2.0.1. https://github.com/decred/dcrd/pull/1798 (not super notable?)
-* main: Use rpcclient/v3. https://github.com/decred/dcrd/pull/1795
-* multi: Use decred fork of go-socks. https://github.com/decred/dcrd/pull/1790 (This modifies the code to use the Decred fork of the go-socks module throughout and updates the affected modules to use the v1.0.0 release of the socks module.)
-* main: Use latest JSON-RPC types. https://github.com/decred/dcrd/pull/1789 (SB: minor upgrade worth mentioning?)
-* mempool: remove unused error return value https://github.com/decred/dcrd/pull/1785 (SB: bug fix)
-* TravisCI: Use more portable module ver stripping. https://github.com/decred/dcrd/pull/1784 (SB: minor script fix that allows it to work on mac)
-* travis: drop docker and test directly https://github.com/decred/dcrd/pull/1783 (SB: minor test improvement)
-* docker: use go 1.12  https://github.com/decred/dcrd/pull/1782 (update docker to use go 1.12)
-* dcrutil: Alias amount types to v2 module https://github.com/decred/dcrd/pull/1781 (SB more type fixing stuff..)
-
+* Version 4 of the `rpcclient` [introduced](https://github.com/decred/dcrd/pull/1807) to make use of the benefits provided by the updated `dcrutil` and `chaincfg` modules.
+* Version 2 of the `database` module [introduced](https://github.com/decred/dcrd/pull/1799) to make use of changes in `dcrutil`. This update breaks the tight coupling of `database` with `dcrutil`.
+* Version 2 of the `blockchain/stake` [introduced](https://github.com/decred/dcrd/pull/1803) to make use of the updated `dcrutil`, `chaincfg`, and `database` modules. This update also took the opportunity to reduce coupling and remove unused code.
+* The `dcrjson` module has also seen a new major version bump to v3 in scope of a [refactoring](https://github.com/decred/dcrd/pull/1779) work that also affects dcrwallet. {1779 changed ~1K lines, 1788 nuked 4K lines (!) but it's hard to decrypt what it does}
+* A [workaround](https://github.com/decred/dcrd/pull/1801) Go compiler's code generation issues had to be added to avoid the explosion of binary size of chaincfg/v2 module.
+* Dependency upgrades and minor speed optimization.
 
 [dcrwallet](https://github.com/decred/dcrwallet): {}
 
