--- a/journal/201907.md
+++ b/journal/201907.md
@@ -445,6 +445,8 @@ Aragon [completed](https://blog.aragon.org/final-results-from-aragon-network-vot
 
 Dash [completed](https://blog.dash.org/the-dash-investment-foundation-supervisor-election-results-96a28309744b) the first annual elections for positions as supervisors of the Dash Investment Foundation, using some software custom [made](https://blog.dash.org/trust-protector-election-software-93ed67c7455b) for this purpose.
 
+Another round of the Tezos protocol amendment process is underway, after the Brest proposal by TzScan Baker failed to achieve enough upvotes to progress. Cryptium Labs [injected](https://blog.nomadic-labs.com/babylon-proposal-injected.html) a proposal called Babylon, prepared jointly with Nomadic Labs, on Jul 26, then an amended version 2.0 on Aug 2. This amendment would make a number of changes to the protocol, including a new variant of the consensus algorithm and new Michelson features, and a new 5% proposal quorum is introduced which will prevent the proposal with the most upvotes progressing to the second phase unless it has support from at least 5% of the stake. This will allow for proposals with little support (like Brest) to be rejected earlier, and the proposal cycle starting again more quickly thereafter.
+
 The 0x decentralized exchange protocol team [announced](https://blog.0xproject.com/shut-down-of-0x-exchange-v2-0-contract-and-migration-to-patched-version-6185097a1f39) that a security vulnerability had been reported by a 3rd-party security researcher, and shut down the exchange contract as a precaution. The 0x smart contract pipeline was patched and re-deployed the next day.
 
 
