--- a/journal/201907.md
+++ b/journal/201907.md
@@ -176,7 +176,7 @@ Attended:
 * Jul 10 - [Decred meetup Sao Paulo](https://twitter.com/Decred_BR/status/1147201276058505216) - Brazil
 * Jul 10 - [StakingCon](https://twitter.com/BlockBeatsChina/status/1147570186519638017?s=20) - Beijing, China - @Dominic [representing](https://twitter.com/DecredCN/status/1148983482732830720) Decred for a chat at this BlockBeats China event
 * Jul 11 - [Staked US event](https://twitter.com/staked_us/status/1148687292032323584?s=20) - NYC, USA. Fireside Chat with @joshuam
-* Jul 31 - [Open Banking Summit](https://theopenbankingsummit.com/) pre-summit meet-up - Mexico City, Mexico - @elian represented the project and gave a talk on Decred
+* Jul 31 - [Open Banking Summit](https://theopenbankingsummit.com/) pre-summit meet-up - Mexico City, Mexico - @elian represented the project and [gave a talk](https://twitter.com/elianhuesca/status/1157313830969630725?s=20) on Decred at the pre-summit meetup.
 * Jul 25 - [Legal Hackers Mexico](https://twitter.com/LegalHackersMX/status/1153832499333795840?s=20) - Mexico City, Mexico. @elian [represented](https://twitter.com/elianhuesca/status/1154452590983299073) the project
 * Jul 28 - [Vietnam Staking Economy](https://twitter.com/DecredVietnam/status/1157150461947813888?s=20) - Ho Chi Minh, Vietnam
 * Chicago July 24? <https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$156261749215178WZXqK:decred.org?via=decred.org&via=matrix.org>
@@ -329,7 +329,7 @@ Aragon [completed](https://blog.aragon.org/final-results-from-aragon-network-vot
 
 Dash [completed](https://blog.dash.org/the-dash-investment-foundation-supervisor-election-results-96a28309744b) the first annual elections for positions as supervisors of the Dash Investment Foundation, using some software custom [made](https://blog.dash.org/trust-protector-election-software-93ed67c7455b) for this purpose.
 
-Another round of the Tezos protocol amendment process is underway, after the Brest proposal by TzScan Baker failed to achieve enough upvotes to progress. Cryptium Labs [injected](https://blog.nomadic-labs.com/babylon-proposal-injected.html) a proposal called Babylon, prepared jointly with Nomadic Labs, on Jul 26, then an amended version 2.0 on Aug 2. This amendment would make a number of changes to the protocol, including a new variant of the consensus algorithm and new Michelson features, and a new 5% proposal quorum is introduced which will prevent the proposal with the most upvotes progressing to the second phase unless it has support from at least 5% of the stake. This will allow for proposals with little support (like Brest) to be rejected earlier, and the proposal cycle starting again more quickly thereafter.
+Another round of the Tezos protocol amendment process is underway, after the Brest proposal by TzScan Baker failed to achieve enough upvotes to progress. Cryptium Labs [injected](https://blog.nomadic-labs.com/babylon-proposal-injected.html) a proposal called Babylon, prepared jointly with Nomadic Labs, on Jul 26, then an amended version 2.0 on Aug 2. This amendment would make a number of changes to the protocol, including a new variant of the consensus algorithm and new Michelson features, and a new 5% proposal quorum is introduced which will prevent the proposal with the most upvotes progressing to the second phase unless it has support from at least 5% of the stake. This will allow for proposals with little support (like Brest) to be rejected earlier, and the proposal cycle to restart more quickly thereafter.
 
 The 0x decentralized exchange protocol team [announced](https://blog.0xproject.com/shut-down-of-0x-exchange-v2-0-contract-and-migration-to-patched-version-6185097a1f39) that a security vulnerability had been reported by a 3rd-party security researcher, and shut down the exchange contract as a precaution. The 0x smart contract pipeline was patched and re-deployed the next day.
 
