--- a/journal/201907.md
+++ b/journal/201907.md
@@ -18,48 +18,9 @@ A [workaround](https://github.com/decred/dcrd/pull/1801) for Go compiler's code 
 
 {any better comments?}
 
-[Decrediton](https://github.com/decred/decrediton): {}
-
-Merged:
-
-* Move undefined variable to beginning https://github.com/decred/decrediton/pull/2162 (bug fix)
-* fix proposal details stop rendering https://github.com/decred/decrediton/pull/2160 (bug fix (run condition))
-* update dcrdata url https://github.com/decred/decrediton/pull/2159 (code maintenance)
-* Dark Mode: Settings selection https://github.com/decred/decrediton/pull/2157 (minor UI enhancement)
-* yarn upgrade packages with security vulnerabilities https://github.com/decred/decrediton/pull/2156 (code maintenance: patched vulnerabilities)
-* Change Decred logo to sold dark blue version in launcher (#2050) https://github.com/decred/decrediton/pull/2155 (UI enhancement)
-* Bump required dcrwallet api version to 7.0.0 https://github.com/decred/decrediton/pull/2151 (This resolves an issue where decrediton cannot be built with the latest release of dcrwallet v2.1.1)
-* upgrade deps https://github.com/decred/decrediton/pull/2149 (code maintenance: updating dependencies)
-* [responsive] Responsive purchase ticket view https://github.com/decred/decrediton/pull/2146 (UI work, refactoring)
-* Fix log and no id message https://github.com/decred/decrediton/pull/2144 (bug fix)
-* Visual Design Send View https://github.com/decred/decrediton/pull/2143 (UI: This PR refactors and update the visual design of transactions send view.)
-
-Open:
-
-* UI dark color scheme implementation https://github.com/decred/decrediton/pull/2163 (bunch of work on Dark Mode. Dark Mode Master Issue: https://github.com/decred/decrediton/issues/2089)
-* [POC] Refactor startup to a finite state machine https://github.com/decred/decrediton/pull/2130 (state machine work referenced in June DJ is ready for review)
-* [POC] Refactor startup to a finite state machine https://github.com/decred/decrediton/pull/2130
-* [ln] Initial Version https://github.com/decred/decrediton/pull/2107 (LAST comment 6/1. Any update? This is the first version of an embedded LN wallet UI on decrediton. Current features:
-
-          Connect to initialized and unlocked ln wallets
-          Fund/Withdraw funds from onchain ln wallet
-          Open/Close channels
-          Create invoices
-          Send payments
-          Due to current limitations of dcrlnd, this can only be used on wallets that
-          have been previously unlocked.
-            
-          It also requires the user to open a regular wallet before connecting to a ln
-          wallet, which is something we might wanna change in the future.
-            
-          For the moment, in order to enable support to LN, users need to manually edit
-          the global decrediton config file to set "ln_enabled: true".
-            
-          It's likely that this can only be merged after updating the grpc and electron versions (which will come on a separate PR)
+[Decrediton](https://github.com/decred/decrediton): Bug fixes and small UI improvements. Responsive purchase ticket view [implemented](https://github.com/decred/decrediton/pull/2146). A ton of dependencies were [upgraded](https://github.com/decred/decrediton/pull/2156) to close a host of vulnerabilities.
 
 [Politeia](https://github.com/decred/politeia): Work continues on the redesign of Politeia's interface. The other major task in July concerned the [integration](https://github.com/decred/politeia/pull/951) of tlog, from Google's open source [Trillian](https://github.com/google/trillian) data store on the backend as a replacement for git. tlog will improve scalability, allow records to be timestamped individually instead of in journals, and will allow for the a switch to a filesystem like [IPFS](https://ipfs.io) in future.
-
-
 
 [dcrstakepool](https://github.com/decred/dcrstakepool): {}
 
