--- a/journal/201907.md
+++ b/journal/201907.md
@@ -252,11 +252,10 @@ Comm systems news:
 Selected topics:
 
 * The #DecredChallenge [started](https://twitter.com/_Checkmatey_/status/1145764832362319872?s=20) on Jul 1 when @checkmate challenged Bitcoiners to spend a month looking into Bitcoin and come out believing it should not be #2, inviting people who are not persuaded of its merits to engage in a debate about it. It [evolved](https://twitter.com/RichardRed0x/status/1146132909713240065?s=20) [quickly](https://twitter.com/_Checkmatey_/status/1146136667448913921?s=20) into a meme, got a [hash tag](https://twitter.com/Ammarooni/status/1146171552213479425), and then (thanks mostly to @checkmate) it grew into a tweet course on reasons why Decred merits serious investigation (see below). 
-
 * Another [article](https://bravenewcoin.com/insights/decred-price-analysis-a-sustained-increase-in-mining-activity-2) was published which described Decred as a "Bitcoin fork", likely based on the use of this term in descriptions on [Coinmarketcap](https://coinmarketcap.com/currencies/decred/) and [Messari](https://messari.io/asset/decred) (which, to be fair, uses the more limited "Bitcoin codebase fork"). This is a mischaracterization which frustrates the community because "Bitcoin fork" would usually be interpreted to mean a coin which forked the Bitcoin Core software and/or BTC UTXO set - neither of which are true in Decred's case. "Bitcoin fork" does not reflect the fact that Decred's software was created from scratch by the same people who launched Decred, beginning its life as btcd, an independent golang implementation of a Bitcoin full node. @lukebp [tweeted](https://twitter.com/lukebp_/status/1155886623147429889) about this and received a response from Messari, @checkmate [expanded](https://twitter.com/_Checkmatey_/status/1155901635257929728) on @lukebp's comment to produce another chapter in the #DecredChallenge.
-
 * @ammarooni took the #DecredChallenge and came out with some [concerns](https://twitter.com/Ammarooni/status/1148013517016113152?s=20) about attack vectors related to stakeholder liability for illegal proposals and the susceptibility of the LLC to seizure of funds. @lukebp and @jz responded with an explanation of how Decred is moving towards a full DAO and how this will address the concerns.
-* The subject of whether to change the name for Decred's smallest units (atoms) or to integrate "credits" in the names for another denomination came up on [twitter](https://twitter.com/OfficialCryptos/status/1151603316167720960) and was discussed in chats and on this GitHub [issue](https://github.com/decredcommunity/issues/issues/129). Developers pointed out that "atom" is used thousands of times in the Decred codebase, which discouraged some proponents of the change but not others.  
+* The subject of whether to change the name for Decred's smallest units (atoms) or to integrate "credits" in the names for another denomination came up on [twitter](https://twitter.com/OfficialCryptos/status/1151603316167720960) and was discussed in chats and on this GitHub [issue](https://github.com/decredcommunity/issues/issues/129). Developers pointed out that "atom" is used thousands of times in the Decred codebase, which discouraged some proponents of the change but not others. 
+* @elian gave a Q&A with Crypto Hispano, published on [steemit](https://steemit.com/btc/@cryptohispano01/decred-q-and-a)
 
 
 Selected Twitter discussions:
