--- a/journal/201907.md
+++ b/journal/201907.md
@@ -30,22 +30,11 @@ A [workaround](https://github.com/decred/dcrd/pull/1801) for Go compiler's code 
 
 Raedah Group has started work to improve the VSP auth APIs (no code published yet) {please elaborate what it does and add links, or drop if not enough info}.
 
-[dcrlnd](https://github.com/decred/dcrlnd): {}
+[dcrlnd](https://github.com/decred/dcrlnd): Upstream [lnd](https://github.com/lightningnetwork/lnd) commits up to July 8 have been [ported](https://github.com/decred/dcrlnd/pull/36#issuecomment-509370199).
 
-All upstream commits from the [LND](https://github.com/lightningnetwork/lnd) repository have been ported and merged {SB: do we have a total number merged? Still 270 (total number reported in June DJ)? do we have a commit/PR/date up to which we're caught up to LND?}. 
+{SB: do we have a total number of PRs merged? is it still 270  as reported in June? do we have a commit/PR/date up to which we're caught up to lnd?}. 
 
-The [lightning-faucet](https://github.com/decred/lightning-faucet) repo has migrated from @matheusd's GitHub to the official decred org, where the faucet saw minor improvements this month to the form generating Lightning [invoices](https://github.com/decred/lightning-faucet/pull/9) and the [addition](https://github.com/decred/lightning-faucet/pull/10) of Continuous Integration (CI). Work has started on a new Pay Invoice form that will allow users to pay via the faucet (currently users must pay invoices on the command line with `dcrlncli`). 
-
-Merged:
-
-* [decred/lightning-faucet] Minor improvements to generate invoice form https://github.com/decred/lightning-faucet/pull/9 (since last month, you can generate invoices at the lightning faucet. this makes minor improvements such as initializing with a valid value, "bug fixes")
-* [decred/lightning-faucet] hook up travis https://github.com/decred/lightning-faucet/pull/10 (Add Continuous Integration (Travis) support for faucet)
-
-Open:
-
-* Port upstream PRs https://github.com/decred/dcrlnd/pull/36  (All upstream commits from the [LND](https://github.com/lightningnetwork/lnd) repository have been ported and merged {SB: do we have a total number merged? Still 270 (total number reported in June DJ)? do we have a commit/PR/date up to which we're caught up to LND?}. 
-* update deps (update dependencies)
-* [decred/lightning-faucet] Rename package, add pay invoice form and update number of confirmations for a channel https://github.com/decred/lightning-faucet/pull/8
+The [lightning-faucet](https://github.com/decred/lightning-faucet) repo has migrated from @matheusd's GitHub to the official decred org, where the faucet saw minor improvements this month to the form for generating Lightning [invoices](https://github.com/decred/lightning-faucet/pull/9) and the [addition](https://github.com/decred/lightning-faucet/pull/10) of Continuous Integration (CI). Work has started on a new Pay Invoice form that will allow users to pay via the faucet (currently users must pay invoices on the command line with `dcrlncli`). 
 
 [dcrandroid](https://github.com/decred/dcrandroid): {} 
 
