--- a/journal/201907.md
+++ b/journal/201907.md
@@ -40,9 +40,7 @@ The [lightning-faucet](https://github.com/decred/lightning-faucet) repo has migr
 
 Work is in progress to add [biometric authentication](https://github.com/decred/dcrandroid/pull/343), [sound and vibration](https://github.com/decred/dcrandroid/pull/399) to notifications, and a [stats page](https://github.com/decred/dcrandroid/pull/397).
 
-[dcrios](https://github.com/raedahgroup/dcrios): {}
-
-Bug fixes and UI optimizations, new translations to [Spanish](https://github.com/raedahgroup/dcrios/pull/500), [Vietnamese](https://github.com/raedahgroup/dcrios/pull/498), and [Portuguese(Brazil)](https://github.com/raedahgroup/dcrios/pull/497).
+[dcrios](https://github.com/raedahgroup/dcrios): Bug fixes and UI optimizations, new translations to [Spanish](https://github.com/raedahgroup/dcrios/pull/500), [Vietnamese](https://github.com/raedahgroup/dcrios/pull/498) and [Portuguese](https://github.com/raedahgroup/dcrios/pull/497).
 
 [dcrdata](https://github.com/decred/dcrdata):
 
