Dev: remove minor stuff

--- a/journal/201907.md
+++ b/journal/201907.md
@@ -46,24 +46,14 @@ Work is in progress to add [biometric authentication](https://github.com/decred/
 
 * reworked proposal page https://github.com/decred/dcrdata/pull/1446
 
-[Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): {}
-
-[docs](https://github.com/decred/dcrdocs): {}
-
-Minor bug fixes. 
-
-[decred.org](https://github.com/decred/dcrweb): {}
-
-Minor bug fixes, mobile wallets [added[(https://github.com/decred/dcrweb/pull/692 ) to core software downloads. 
-
 Other:
 
-* RG (maybe others?) have been working a lot this month on [dcrextdata.raedahgroup.com](dcrextdata.raedahgroup.com), a pkg for collecting external data sources not yet found on dcrdata. Should we maybe put this under dcrdata, since it's related and may be merged?
-* RG is working on a mobile app for local person-to-person BTC/DCR trading (work is in private repos for now)
+* RG {maybe others?} have been working on [dcrextdata.raedahgroup.com](dcrextdata.raedahgroup.com), a package for collecting external data not yet found on dcrdata. {should we maybe put this under dcrdata, since it's related and may be merged?}
+* RG is working on a mobile app for local person-to-person BTC/DCR trading (the work is in private repos for now).
 * [bug bounty](https://bounty.decred.org/) website [update](https://twitter.com/degeri_crypto/status/1154776087374770176): added details for 3 new vulnerabilities. The program has processed a total of 67 submissions, with 9 being eligible for a payout, of which 8 have been patched and disclosed.
-* {mention webwallet no longer supported here?}
+* {mention webwallet no longer supported, add links}
 
-Dev activity stats for July: 51 active PRs, 219 master commits, 50148K added and 28692K deleted lines spread across 15 repositories. Contributions came from 1-6 developers per repository. ([chart]({chart link is optional, drop if not ready}))
+Dev activity stats for July: 51 active PRs, 219 master commits, 50K added and 29K deleted lines spread across 15 repositories. Contributions came from 1-6 developers per repository.
 
 ## People
 
