--- a/journal/201907.md
+++ b/journal/201907.md
@@ -57,16 +57,14 @@ Dev activity stats for July: 51 active PRs, 219 master commits, 50K added and 29
 
 ## People
 
-Welcome to new first time contributors with code merged to master: bgptr[decrediton](https://github.com/decred/decrediton/commits?author=bgptr), emesterhazy[decrediton](https://github.com/decred/decrediton/commits?author=emesterhazy), ReevesAk[dcrwallet](https://github.com/decred/dcrwallet/commits?author=ReevesAk)
-
+Welcome to new first time contributors with code merged to master: bgptr ([decrediton](https://github.com/decred/decrediton/commits?author=bgptr)), emesterhazy ([decrediton](https://github.com/decred/decrediton/commits?author=emesterhazy)), ReevesAk ([dcrwallet](https://github.com/decred/dcrwallet/commits?author=ReevesAk)).
 
 Congratulations to the 4 contributors listed on [decred.org](https://decred.org/contributors/):
 
 * Akin Sawyerr (@akinsawyerr, Africa Lead & Strategy)
 * Kevin Hebert (@klebe, Developer)
-* Victor Guedes (@VictorGuedes, Developer)
 * Leslie Ankney (@cryptoleslie, Public Relations)
-
+* Victor Guedes (@VictorGuedes, Developer)
 
 Decred Australia community has been building nicely. An [update](https://medium.com/@sahand.bagheri/decred-australia-building-a-community-brick-by-brick-89928041687e) shared last month recaps partnerships established, events organized, people attracted as well as next goals. This was covered in [June](201906.md)'s Media but turned out bigger than just an article.
 
