--- a/journal/201907.md
+++ b/journal/201907.md
@@ -24,7 +24,7 @@ A [workaround](https://github.com/decred/dcrd/pull/1801) for Go compiler's code 
 
 {will login by username be deployed on Pi or is it CMS-only? https://github.com/decred/politeia/pull/940}
 
-[dcrstakepool](https://github.com/decred/dcrstakepool): bug fixes, UI and performance improvements. Added [feature](https://github.com/decred/dcrstakepool/pull/440) to show block height of the VSP to see if it is healthy. More work to [decouple](https://github.com/decred/dcrstakepool/issues/227) dcrstakepool and dcrwallet (dcrstakepool should only talk to the stakepoold service that in turn manages the voting wallet).
+[dcrstakepool](https://github.com/decred/dcrstakepool): bug fixes, UI and performance improvements. Reworked [Connect to Wallet](https://github.com/decred/dcrstakepool/pull/427) view and added the display of VSP's [block height](https://github.com/decred/dcrstakepool/pull/440) to see if it is healthy. More work to [decouple](https://github.com/decred/dcrstakepool/issues/227) dcrstakepool and dcrwallet (dcrstakepool should only talk to the stakepoold service that in turn manages the voting wallet).
 
 {please provide an overview of dcrstakepool work in July}
 
@@ -48,6 +48,7 @@ Work is in progress to add [biometric authentication](https://github.com/decred/
 
 Other:
 
+* Draft of the DEX specification has been released and added to the new [dcrdex](https://github.com/decred/dcrdex) repository.
 * RG {maybe others?} have been working on [dcrextdata.raedahgroup.com](dcrextdata.raedahgroup.com), a package for collecting external data not yet found on dcrdata. {should we maybe put this under dcrdata, since it's related and may be merged?}
 * RG is working on a mobile app for local person-to-person BTC/DCR trading (the work is in private repos for now).
 * [bug bounty](https://bounty.decred.org/) website [update](https://twitter.com/degeri_crypto/status/1154776087374770176): added details for 3 new vulnerabilities. The program has processed a total of 67 submissions, with 9 being eligible for a payout, of which 8 have been patched and disclosed.
