--- a/journal/201907.md
+++ b/journal/201907.md
@@ -4,6 +4,12 @@
 
 {introduction, major news of the month ordered by impact}
 
+Major news of July:
+
+* Draft of the DEX spec was released - an important milestone on the route to refresh the crypto exchange experience.
+* {Python library release and proposal}
+* Staked DCR briefly crossed 50% for the first time.
+
 ## Development
 
 [dcrd](https://github.com/decred/dcrd): Code maintenance, bug fixes, test infrastructure. 
