--- a/journal/201907.md
+++ b/journal/201907.md
@@ -146,17 +146,19 @@ Community stats as of Aug 1:
 
 ## Governance
 
-In July the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 15,517 DCR and spent 10,344 DCR. Using July's daily average DCR/USD rate of $28.97, this is $450K received and $300K spent. These payments were for work completed in June at the rate of $28.90, so the billed amount is almost the same. As of Aug 1, Treasury balance is 627,514 DCR (16.8 million USD at $26.75).
+In July the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 15,517 DCR and spent 10,344 DCR. Using July's daily average DCR/USD rate of $28.97, this is $450K received and $300K spent. As these payments were for work completed in June, it is also informative to consider them in the context of the June average daily rate of $28.90 {hardly worth repeating with such low volatility ;-)} - in which case the USD spent figure is $448K. As of Aug 1, Treasury balance is 627,514 DCR (16.8 million USD at $26.75).
 
-In July, 2 new proposals were submitted {update status upon release}: 
+{do we need _received_ figure for prev month? rr: probably not, have removed}
+
+In July, 2 new proposals were submitted: 
 
 * [Decred Fundamental Metrics Research Proposal - Phase 1](https://proposals.decred.org/proposals/78b50f218106f5de40f9bd7f604b048da168f2afbec32c8662722b70d62e4d36) by @checkmate, a new contributor, requesting $12,000 for 3 months work on research and social media presence, plus $2,000 for work completed prior to this ([monetary premiums article](https://medium.com/@_Checkmatey_/monetary-premiums-can-altcoins-compete-with-bitcoin-54c97a92c6d4)). Voting started on Jul 30.
 
 * [TinyDecred: A Python Toolkit for Decred](https://proposals.decred.org/proposals/20e967dad9e7398901decf3cfe0acf4e0853f6558a62607265c63fe791b8b124) by @buck54321, a contractor working on dcrdata for the last year, requests $8,000 for work already completed on TinyDecred, a set of tools for interacting with the Decred blockchain in Python.
 
-[Issue 19](https://medium.com/politeia-digest/issue-19-june-30-july-31-2019-c591fcb79d98) of Politeia Digest has more detail on July's proposal activity.
+[Issue 19](https://github.com/RichardRed0x/politeia-digest/blob/master/issue-019.md) of Politeia Digest has more detail on July's proposal activity.
 
-A [dataset](https://github.com/RichardRed0x/pi-research/blob/master/data/comments-and-updown-votes/pi-users.csv) and [short report](https://github.com/RichardRed0x/pi-research/blob/master/analysis/comments-and-updown-votes/users-review.md) has been prepared which aggregates the Politeia data on the basis of username, producing accurate figures for how often each user has commented and voted, and how well their comments have scored. 
+A [data-set](https://github.com/RichardRed0x/pi-research/blob/master/data/comments-and-updown-votes/pi-users.csv) and [short report](https://github.com/RichardRed0x/pi-research/blob/master/analysis/comments-and-updown-votes/users-review.md) has been prepared which aggregates the Politeia data on the basis of username, producing accurate figures for how often each user has commented and voted, and how well their comments have scored. 
 
 ## Network
 
@@ -192,7 +194,7 @@ Exodus wallet announced that users can now use their trezor hardware wallets to 
 
 Warning: the authors of Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
-Interesting development in exchange space https://twitter.com/vertbase/status/1147840898564120577 {Is integrations the right place for this ?}
+Interesting development in exchange space https://twitter.com/vertbase/status/1147840898564120577 {Is integrations the right place for this ?} {SB: kinf of feels out of place...governance?? that's not great either though}
 
 ## Adoption
 
@@ -257,7 +259,7 @@ Selected articles:
 Translations:
 
 * {}
-* @wanbihou translated Dex spec?
+* @wanbihou translated Dex spec? {SB: Dominic translated the DEX spec into chinese: https://github.com/DominicTing/dcrdexStandard-CN-/blob/master/README.mediawiki. managed to post it to our Binance CN info page new feed without pushback: https://info.binance.com/cn/currencies/decred}
 
 Videos:
 
@@ -365,7 +367,8 @@ Another round of the Tezos protocol amendment process is underway, after the Bre
 
 The 0x decentralized exchange protocol team [announced](https://blog.0xproject.com/shut-down-of-0x-exchange-v2-0-contract-and-migration-to-patched-version-6185097a1f39) that a security vulnerability had been reported by a 3rd-party security researcher, and shut down the exchange contract as a precaution. The 0x smart contract pipeline was patched and re-deployed the next day.
 
-
+{SB: maybe cover Maker's governance portal revamp? Looks like they're doing off-chain voting for governance polls, sounds familiar...
+https://blog.makerdao.com/an-update-to-maker-governance-polling/}
 
 {related exchanges and websites}
 
