--- a/journal/201907.md
+++ b/journal/201907.md
@@ -333,6 +333,6 @@ Your [feedback](https://github.com/xaur/decred-news/blob/docs/contributing.md#fe
 
 Credits (alphabetical order):
 
-* writing and editing: {}
-* reviews and feedback: {}
+* writing and editing: bee, degeri, lukebp, richardred, s\_ben
+* reviews and feedback: chappjc, raedah
 * title image: {}
