--- a/journal/201907.md
+++ b/journal/201907.md
@@ -38,7 +38,7 @@ Raedah Group has started work to improve the VSP auth APIs (no code published ye
 
 [dcrlnd](https://github.com/decred/dcrlnd): Upstream [lnd](https://github.com/lightningnetwork/lnd) commits up to July 8 have been [ported](https://github.com/decred/dcrlnd/pull/36#issuecomment-509370199).
 
-{SB: do we have a total number of PRs merged? is it still 270  as reported in June? do we have a commit/PR/date up to which we're caught up to lnd?}. 
+{Do we have a total number of PRs merged? is it still 270  as reported in June? Do we have a commit/PR/date up to which we're caught up to lnd?}. 
 
 The [lightning-faucet](https://github.com/decred/lightning-faucet) repo has migrated from @matheusd's GitHub to the official decred org, where the faucet saw minor improvements this month to the form for generating Lightning [invoices](https://github.com/decred/lightning-faucet/pull/9) and the [addition](https://github.com/decred/lightning-faucet/pull/10) of Continuous Integration (CI). Work has started on a new Pay Invoice form that will allow users to pay via the faucet (currently users must pay invoices on the command line with `dcrlncli`). 
 
@@ -145,7 +145,7 @@ Exodus wallet announced that users can now use their trezor hardware wallets to 
 
 Warning: the authors of Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
-Interesting development in exchange space https://twitter.com/vertbase/status/1147840898564120577 {Is integrations the right place for this ?} {SB: kinf of feels out of place...governance?? that's not great either though}
+Interesting development in exchange space https://twitter.com/vertbase/status/1147840898564120577 {Is integrations the right place for this ?} {Kinf of feels out of place...perhaps better in governance?}
 
 ## Adoption
 
