Incorporate lukebp feedback re: Politeia

--- a/journal/201907.md
+++ b/journal/201907.md
@@ -26,9 +26,9 @@ A [workaround](https://github.com/decred/dcrd/pull/1801) for Go compiler's code 
 
 [Decrediton](https://github.com/decred/decrediton): Bug fixes and small UI improvements. Responsive purchase ticket view [implemented](https://github.com/decred/decrediton/pull/2146). A ton of dependencies were [upgraded](https://github.com/decred/decrediton/pull/2156) to close a host of vulnerabilities.
 
-[Politeia](https://github.com/decred/politeia): Work continues on the [redesign](https://github.com/decred/dcrdesign/issues/77) of Politeia's interface. The other major task in July concerned the [integration](https://github.com/decred/politeia/pull/951) of tlog, from Google's open source [Trillian](https://github.com/google/trillian) data store on the backend as a replacement for git. tlog will improve scalability, allow records to be timestamped individually instead of in journals, and will allow for the a switch to a filesystem like [IPFS](https://ipfs.io) in future.
+[Politeia](https://github.com/decred/politeia): Work continues on the [redesign](https://github.com/decred/dcrdesign/issues/77) of Politeia's interface. The other major task in July concerned the [integration](https://github.com/decred/politeia/pull/951) of tlog, from Google's open source [Trillian](https://github.com/google/trillian) data store on the backend as a replacement for git. tlog will improve scalability, allow records to be timestamped individually, and will allow for the a switch to a filesystem like [IPFS](https://ipfs.io) in future.
 
-{will login by username be deployed on Pi or is it CMS-only? https://github.com/decred/politeia/pull/940}
+Login by username has been [implemented](https://github.com/decred/politeia/pull/940) in the Contractor Management System (CMS), and will be deployed on Politeia during the next update. 
 
 [dcrstakepool](https://github.com/decred/dcrstakepool): bug fixes, UI and performance improvements. Reworked [Connect to Wallet](https://github.com/decred/dcrstakepool/pull/427) view and added the display of VSP's [block height](https://github.com/decred/dcrstakepool/pull/440) to see if it is healthy. More work to [decouple](https://github.com/decred/dcrstakepool/issues/227) dcrstakepool and dcrwallet (dcrstakepool should only talk to the stakepoold service that in turn manages the voting wallet).
 
