Incorporate raedah feedback

--- a/journal/201907.md
+++ b/journal/201907.md
@@ -58,12 +58,11 @@ Changes in dcrd have been [incorporated](https://github.com/decred/dcrdata/pull/
 
 Work continues to finish removing [sqlite](https://github.com/decred/dcrdata/pull/1480). 
 
-There is also ongoing work to enhance the external data offering of dcrdata, and progress has been made on collecting and presenting node-level data about the mempool and block propagation times. These are being tracked now from a single node and the full history of tracked data will be made available (with charts) when it has been polished. dcrextdata also pulls in and stores data from PoW polls and VSPs now, which will allow a historical record of these attributes to be maintained.
+RG continues work on [dcrextdata.raedahgroup.com](dcrextdata.raedahgroup.com), a package for collecting external data not yet found on dcrdata, and progress has been made on collecting and presenting node-level data about the mempool and block propagation times. These are being tracked now from a single node and the full history of tracked data will be made available (with charts) when it has been polished. dcrextdata also pulls in and stores data from PoW polls and VSPs now, which will allow a historical record of these attributes to be maintained.
 
 Other:
 
 * Draft of the DEX specification has been released and added to the new [dcrdex](https://github.com/decred/dcrdex) repository.
-* RG {maybe others?} have been working on [dcrextdata.raedahgroup.com](dcrextdata.raedahgroup.com), a package for collecting external data not yet found on dcrdata. {should we maybe put this under dcrdata, since it's related and may be merged?}
 * RG is working on a mobile app for local person-to-person BTC/DCR trading (the work is in private repos for now).
 * [bug bounty](https://bounty.decred.org/) website [update](https://twitter.com/degeri_crypto/status/1154776087374770176): added details for 3 new vulnerabilities. The program has processed a total of 67 submissions, with 9 being eligible for a payout, of which 8 have been patched and disclosed.
 * {mention webwallet no longer supported, add links}
@@ -178,7 +177,7 @@ Attended:
 * Jul 11 - [Staked US event](https://twitter.com/staked_us/status/1148687292032323584?s=20) - NYC, USA. Fireside Chat with @joshuam
 * Jul 31 - [Open Banking Summit](https://theopenbankingsummit.com/) pre-summit meet-up - Mexico City, Mexico - @elian represented the project and [gave a talk](https://twitter.com/elianhuesca/status/1157313830969630725?s=20) on Decred at the pre-summit meetup.
 * Jul 25 - [Legal Hackers Mexico](https://twitter.com/LegalHackersMX/status/1153832499333795840?s=20) - Mexico City, Mexico. @elian [represented](https://twitter.com/elianhuesca/status/1154452590983299073) the project
-* Jul 28 - [Vietnam Staking Economy](https://twitter.com/DecredVietnam/status/1157150461947813888?s=20) - Ho Chi Minh, Vietnam
+* Jul 28 - [Vietnam Staking Economy](https://github.com/decredcommunity/events/pull/7) - Ho Chi Minh, Vietnam
 * Chicago July 24? <https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$156261749215178WZXqK:decred.org?via=decred.org&via=matrix.org>
 
 Upcoming:
