Incorporate raedah feedback

--- a/journal/201907.md
+++ b/journal/201907.md
@@ -34,7 +34,7 @@ Login by username has been [implemented](https://github.com/decred/politeia/pull
 
 {please provide an overview of dcrstakepool work in July}
 
-Raedah Group has started work to improve the VSP auth APIs (no code published yet) {please elaborate what it does and add links, or drop if not enough info}.
+RG has started work to [improve](https://github.com/raedahgroup/dcrstakepool/pull/4) the VSP auth APIs. This will enable the use of accountless VSPs, which will greatly simplify the staking setup process for new users ([discussion](https://riot.im/app/#/room/!wSdymYrEpBhsWlDJuk:decred.org/$15605505894685ViDcj:decred.org?via=decred.org&via=matrix.org&via=zettaport.com)). 
 
 [dcrlnd](https://github.com/decred/dcrlnd): Upstream [lnd](https://github.com/lightningnetwork/lnd) commits up to July 8 have been [ported](https://github.com/decred/dcrlnd/pull/36#issuecomment-509370199).
 
