--- a/journal/201907.md
+++ b/journal/201907.md
@@ -8,7 +8,6 @@ Major news of July:
 
 * Draft of the DEX spec was released - an important milestone on the route to refresh the crypto exchange experience.
 * {Python library release and proposal}
-* Staked DCR briefly crossed 50% for the first time.
 
 ## Development
 
@@ -110,20 +109,17 @@ A [dataset](https://github.com/RichardRed0x/pi-research/blob/master/data/comment
 
 ## Network
 
-Hashrate: July's hashrate opened at ~503 Ph/s and closed ~583 Ph/s, bottoming at 319 Ph/s and peaking at 687 Ph/s throughout the month. Pool hashrate distribution as of Aug2: F2Pool 20.78%, UUPool 18.96%, lab.antpool.com 16.50%, Poolin 9.51%, BTC.com 7.29%, Luxor 2.20%, BeePool 0.14%, Coinmine 0.12%, suprnova 0.08% and others 24.42% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
+Hashrate: July's hashrate opened at ~503 Ph/s and closed ~583 Ph/s, bottoming at 319 Ph/s and peaking at 687 Ph/s throughout the month. Pool hashrate distribution as of Aug 2: F2Pool 21%, UUPool 19%, lab.antpool.com 16.5%, Poolin 9.5%, BTC.com 7.3%, Luxor 2.2%, BeePool 0.14%, Coinmine 0.12%, suprnova 0.08% and others 24% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
 
-Sharp drop in hashrate 550-319 was observed on Jul 5 according to dcrstats.com, the hash rate quickly rose up again.There was a long some [discussion](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$156238052013967KGajR:decred.org?via=decred.org&via=matrix.org&via=zettaport.com) on the possible reasons for the drop and on its [accuracy](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$156245221914434sRKEL:decred.org?via=decred.org&via=matrix.org&via=zettaport.com). 
+Sharp drop in hashrate from 550 to 319 Ph/s was observed on Jul 5 according to dcrstats.com, followed by a quick recovery after ~20 hours. There was a long [discussion](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$156238052013967KGajR:decred.org) on the possible reasons for the drop and on its [accuracy](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$156245221914434sRKEL:decred.org). 
 
-{helpful for PoS: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now}
+Staking: 30-day average ticket price was 125.8 DCR (+5.8) per dcrstats.com. The price varied between 118.8-129.5 DCR. Locked amount was 4.83-5.06 million DCR, which corresponded to 48.25-49.84% of the available supply.
 
-Staking: 30-day average ticket price was 125.85 DCR (+5) per dcrstats.com. The price varied between 118.8-129.4 DCR. Locked amount was 4.86-5.04 million DCR, which corresponded to 48.5-49.61% of the available supply. 
+The ticket price got to the highest levels (129.46) since the difficulty algorithm consensus chage in July 2017. An [argument](https://matrix.to/#/!kdpEDksmOMNrlMqffD:decred.org/$156359151625133psHEo:decred.org) was made that this value should not be considered an "ATH".
 
-The ticket prices got to the highest levels (129.46) since the sdiffalgorithm consensus chage. Dave gave us some [insight](https://matrix.to/#/!kdpEDksmOMNrlMqffD:decred.org/$156359151625133psHEo:decred.org?via=decred.org&via=matrix.org) on if this could be considered an "ATH"
+Nodes: Throughout [July](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1561939200000&to=1564617600000) there were around 173 listening nodes and 360-530 total nodes per dcr.farm. As of Aug 2, roughly 70% run dcrd v1.4.0, 7.5% are dcrwallet v1.4.0, and 6% are v1.5.0(pre) dev builds.
 
-Nodes: Throughout [July](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1561970982782&to=1564562982782) there were around 171 listening nodes and 189-553 total nodes per dcr.farm. As of Aug 2, roughly 69.72% run v1.4.0, and 5.96% run v1.5.0(pre) dev builds.
-
-
-As of [Aug 2](https://charts.dcr.farm/d/DHPdAO4Wz/lightning-network?orgId=1), the DCR testnet LN shows 18 nodes, 52 channels and a total capacity of 410 DCR.
+As of Aug 2, the DCR [testnet LN](https://charts.dcr.farm/d/DHPdAO4Wz/lightning-network?orgId=1) shows 18 nodes, 52 channels and a total capacity of 410 DCR.
 
 ## Mining
 
